tests/ui/specialization/coherence/default-impl-normalization-ambig-2.stderr
warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/default-impl-normalization-ambig-2.rs:2:12
   |
LL | #![feature(specialization)]
   |            ^^^^^^^^^^^^^^
   |
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information
   = help: consider using `min_specialization` instead, which is more stable and complete
   = note: `#[warn(incomplete_features)]` on by default

error[E0277]: the trait bound `u16: Assoc` is not satisfied
  --> $DIR/default-impl-normalization-ambig-2.rs:17:14
   |
LL | impl Foo for <u16 as Assoc>::Output {}
   |              ^^^^^^^^^^^^^^^^^^^^^^ the trait `Assoc` is not implemented for `u16`
   |
   = help: the trait `Assoc` is implemented for `u8`

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
